force-app/main/default/objects/Contact/fields/Acepta_Tratamiento_Datos__c.field-meta.xml
<CustomField>
    <fullName>Acepta_Tratamiento_Datos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el contacto aceptó la política de tratamiento de datos personales.</description>
    <label>Acepta Tratamiento de Datos</label>
    <type>Checkbox</type>
</CustomField>