force-app/main/default/objects/Contact/fields/Especialidad__c.field-meta.xml
<CustomField>
    <fullName>Especialidad__c</fullName>
    <description>Especialidad médica del contacto.</description>
    <label>Especialidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Pediatría</fullName>
            </value>
            <value>
                <fullName>Cardiología</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>