force-app/main/default/objects/Contact/fields/Fecha_Aceptacion_Datos__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Aceptacion_Datos__c</fullName>
    <description>Fecha y hora en la que el contacto aceptó la política de tratamiento de datos personales.</description>
    <label>Fecha de Aceptación de Datos</label>
    <type>DateTime</type>
</CustomField>