force-app/main/default/objects/Contact/fields/Pin_Clinica__c.field-meta.xml
<CustomField>
    <fullName>Pin_Clinica__c</fullName>
    <description>PIN de la clínica para asociar a los asistentes.</description>
    <label>PIN de la Clínica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>