force-app/main/default/objects/Contact/fields/Sexo__c.field-meta.xml
<CustomField>
    <fullName>Sexo__c</fullName>
    <description>Sexo del contacto (requerido para médicos).</description>
    <label>Sexo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hombre</fullName>
            </value>
            <value>
                <fullName>Mujer</fullName>
            </value>
            <value>
                <fullName>Intersexual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>