force-app/main/default/objects/Contact/fields/Tipo_de_Usuario__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Usuario__c</fullName>
    <description>Indica la ruta de registro del usuario (Médico o Asistente).</description>
    <label>Tipo de Usuario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Médico</fullName>
            </value>
            <value>
                <fullName>Asistente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>